# FocusLedger

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  FocusLedger — Codex 开发提示词.md  PRODUCT_NOTEBOOKLM_DIRECTION.md  README.md  WECHAT_INGESTION_ADAPTATION.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_source_groups_and_tags.py  0003_source_credentials_and_health.py  0004_ingestion_jobs.py  0005_article_management_fields.py  0006_notebooks.py  0007_notebook_chat_messages.py  0008_notebook_podcast_scripts.py  0009_notebook_podcast_audio_jobs.py  0010_ingestion_job_date_range.py
backend/scripts/: cleanup_wechat_duplicates.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/core/: config.py  logging.py
backend/src/db/: base.py  session.py
backend/src/integrations/: tts_worker.py
backend/src/llm/: base.py  providers.py  taxonomy.py  taxonomy_files.py
backend/src/models/: __init__.py  article.py  article_embedding.py  article_metrics.py  article_source.py  feedback_event.py  ingestion_job.py  notebook.py  notebook_article.py  notebook_chat_message.py  notebook_podcast_script.py  novelty_analysis.py  recommendation_result.py  source_credential.py  user_profile.py
backend/src/novelty/: __init__.py  analysis.py
backend/src/parsers/: wechat.py
backend/src/ranking/: scoring.py
backend/src/retrieval/: search.py
backend/src/schemas/: __init__.py  agent.py  (+6 more)
backend/tests/: test_scoring.py  test_wechat_parser.py
(+91 files in other folders)
