[project]
name = "focusledger-backend"
version = "0.1.0"
description = "FocusLedger backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn[standard]>=0.30.6",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.0",
  "psycopg[binary]>=3.2.4",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "httpx>=0.28.1",
  "requests>=2.32.3",
  "beautifulsoup4>=4.13.3",
  "lxml>=6.0.2",
  "playwright>=1.57.0",
  "pandas>=2.2.3",
  "openpyxl>=3.1.5",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
